--- a/IPL-social/.github/workflows/ci.yml
+++ b/IPL-social/.github/workflows/ci.yml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '16'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Run tests with jasmine
+        run: npx jasmine
