--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^5.5.0"
+    "jasmine": "^5.5.0",
+    "jest": "^29.7.0"
   }
 }
